# stdint_ext

./: CMakeLists.txt  LICENSE  README.md  test.cpp
include/stdint_ext/: stdint_ext.hpp
